<resources>
    <string name="app_name">Examica</string>
    <string name="login">Log In</string>
    <string name="email">1234xxx/Email</string>
    <string name="password">Password</string>
    <string name="ForgotPassword">Forget Password ?</string>
    <string name="GetNewOne">Get New One</string>
    <string name="create">Create</string>
    <string name="mobileno">Mobile Number</string>
    <string name="mobileno1">1234xxxx/Email ID</string>

    <string name="entername">Name</string>
    <string name="EnterAddress">Father Name</string>
    <string name="EnterEmailAddress">Permanent Address</string>
    <string name="EnterMobile">Date Of Birth</string>
    <string name="AtlernateMobile">School / Institute</string>
    <string name="reset">Forget Password</string>
    <string name="nothaveanac">Not have an Account</string>
    <string name="signup">Sign Up</string>
    <string name="diduforget"> Forget Your</string>
    <string name="password1">Password?</string>
    <string name="Home">Home</string>
    <string name="settings">Settings</string>
    <string name="dot">:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="myprofile">My Profile</string>
    <string name="changepass">Change Password</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="rateapp">Rate App</string>
    <string name="share">Share</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="enroll">Enroll</string>
    <string name="Examname">Exam name</string>
    <string name="username">Exam Description</string>
    <string name="class1">Class :</string>
    <string name="classname">Class </string>
    <string name="prize1"> Price</string>
    <string name="ru1">500 rs</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="emailid">Email Id</string>
    <string name="highschoolexamnation">High School Examnation</string>
    <string name="classname1">Class </string>
    <string name="highschool">High School</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout</string>
    <string name="cancel">cancel</string>
    <string name="selectimage">Select Image</string>
    <string name="camera">Camera</string>
    <string name="entereotpmsg">Enter The OTP You Received On Your Entered Mobile Number/Email.</string>
    <string name="otp1">Enter Otp</string>
    <string name="enterotp">Enter OTP</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="EnterTheMobileNumberToResetPassword">Enter The Mobile Number To Reset The Password</string>
    <string name="thenumber">The Number</string>
    <string name="number">1234567890</string>
    <string name="refund">Refund</string>
    <string name="update">Update</string>
    <string name="NetworkError">Network Error</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="networkerror">Network error</string>
    <string name="SomethingWentWrong">Something Went Wrong</string>
    <string name="userexamid">User Exam ID</string>
    <string name="examid">Exam ID</string>
    <string name="seemore">See More</string>
    <string name="selectclass">Select class</string>
    <string name="rupee">₹</string>
    <string name="examdesc">Exam Description</string>


</resources>