<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar5" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/toolbar1"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar1"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:visibility="visible"

                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/entername">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nametv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/father_layout"
                    android:layout_below="@+id/name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/EnterAddress">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fathernametv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/father_layout"
                    android:id="@+id/add_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/EnterEmailAddress">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addresstv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/add_layout"
                    android:id="@+id/dob_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/EnterMobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dobtv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="none"
                        android:maxLength="10"
                        android:focusable="false"
                        android:padding="@dimen/_10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/dob_layout"
                    android:id="@+id/scname_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/AtlernateMobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/scnametv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="textPersonName"
                        android:maxLength="10"
                        android:padding="@dimen/_10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/class_layout"                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:layout_below="@id/scname_layout"
                    android:layout_marginStart="@dimen/_40dp"
                    android:focusable="false"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/selectclass">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/classspi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:inputType="none"
                        android:padding="@dimen/_10dp"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                        android:singleLine="true"
                        android:focusable="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_layout"
                    android:layout_below="@+id/class_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/mobileno">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobiletv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:inputType="number"
                        android:padding="@dimen/_10dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_below="@+id/mobile_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/emailid">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailtv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:visibility="gone"
                    android:layout_below="@+id/email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passtv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmpass_layout"
                    android:visibility="gone"
                    android:layout_below="@+id/password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_40dp"
                    android:hint="@string/confirmpass">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmpasstv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10dp"
                        android:visibility="gone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/confirmpass_layout"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="@dimen/_40dp"
                    android:layout_marginBottom="100dp"
                    android:background="@color/black"
                    android:textSize="@dimen/_15dp"
                    android:fontFamily="@font/dinarabic"
                    android:visibility="visible"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/white1" />



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>